@@ -68,38 +68,32 @@ int test_json_file ( char *filename )
 
 int main ( )
 {
-// 	// tests the example JSON document taken from the JSON site
-// 	if ( !test_json_file ( "test/test1.json" ) )
-// 	{
-// 		printf ( "error\n" );
-// 		return EXIT_SUCCESS;
-// 	}
-// 	if ( !test_json_file ( "test/test2.json" ) )
-// 	{
-// 		printf ( "error\n" );
-// 		return EXIT_SUCCESS;
-// 	}
-// 	if ( !test_json_file ( "test/test3.json" ) )
-// 	{
-// 		printf ( "error\n" );
-// 		return EXIT_SUCCESS;
-// 	}
-// 	if ( !test_json_file ( "test/test4.json" ) )
-// 	{
-// 		printf ( "error\n" );
-// 		return EXIT_SUCCESS;
-// 	}
-// 	if ( !test_json_file ( "test/test5.json" ) )
-// 	{
-// 		printf ( "error\n" );
-// 		return EXIT_SUCCESS;
-// 	}
 	setlocale(LC_CTYPE,"");
-	
- 	rstring *me = rs_create(L"me!");
-	
-	rs_copycs(me,L"too!",4);
-	printf("%ls\n",me->s);
-	rs_destroy(&me);
+	// tests the example JSON document taken from the JSON site
+	if ( !test_json_file ( "test/test1.json" ) )
+	{
+		printf ( "error\n" );
+		return EXIT_SUCCESS;
+	}
+	if ( !test_json_file ( "test/test2.json" ) )
+	{
+		printf ( "error\n" );
+		return EXIT_SUCCESS;
+	}
+	if ( !test_json_file ( "test/test3.json" ) )
+	{
+		printf ( "error\n" );
+		return EXIT_SUCCESS;
+	}
+	if ( !test_json_file ( "test/test4.json" ) )
+	{
+		printf ( "error\n" );
+		return EXIT_SUCCESS;
+	}
+	if ( !test_json_file ( "test/test5.json" ) )
+	{
+		printf ( "error\n" );
+		return EXIT_SUCCESS;
+	}
 	return EXIT_SUCCESS;
 }
